Delete endpoint for adding question to an existing questionnaire
